--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Check out</a></li>
+									<li><a href="#" class="button large">Check Out</a></li>
 								</ul>
 							</article>
 
@@ -64,21 +64,24 @@
 										<h2><a href="#">Firebase Chat</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Description:<br />
+									<p>
                                         This is one project of Chat that uses the Firebase.
-                                        It is created with React.</p>
+                                        It is created with React.
+                                    </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Check out</a></li>
+										<li><a href="./ready/react/superchat/index.html">Check Out</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Project 2 - Own Facebook</a></h2>
+										<h2><a href="#">Own Facebook</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Still working on this....</p>
+									<p>
+                                        Still working on this....
+                                    </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Check out</a></li>
+										<li><a href="#" class="button">Check Out</a></li>
 									</ul>
 								</article>
 							</section>
