--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Firebase Chat</a></h2>
+										<h2><a href="https://hri100v.github.io/ready/react/superchat/index.html">Firebase Chat</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://hri100v.github.io/ready/react/superchat/index.html" class="image fit"><img src="images/FirebaseChat.png" alt="FirebaseChat image" /></a>
 									<p>
                                         This is one project of Chat that uses the Firebase.
                                         It is created with React.
                                     </p>
 									<ul class="actions special">
-										<li><a href="./ready/react/superchat/index.html">Check Out</a></li>
+										<li><a href="https://hri100v.github.io/ready/react/superchat/index.html" class="button">Check Out</a></li>
 									</ul>
 								</article>
 								<article>
@@ -78,7 +78,8 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>
-                                        Still working on this....
+                                        Still working on this....<br />
+                                        Uses React and Firebase.
                                     </p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Check Out</a></li>
