--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://hri100v.github.io/ready/PWA/todo-app/index.html">My TODO <i>PWA</i></a></h2>
+										<h2><a href="https://hri100v.github.io/ready/PWA/todo-app/index.html">My TODO - PWA <i>(Progressive Web Apps)</i></a></h2>
 									</header>
 									<a href="https://hri100v.github.io/ready/PWA/todo-app/index.html" class="image fit"><img src="images/TODO-PWA.png" alt="TODO-PWA image" /></a>
 									<p>
-                                        PWA - TODO
-										....
+										This is a TODO application based on the PWA technology for mobile devices without Android or IOS development. 
+										Using <strong>Service Worker</strong> and <strong>Web Manifest</strong> to make one standalone application.
                                     </p>
 									<ul class="actions special">
 										<li><a href="https://hri100v.github.io/ready/PWA/todo-app/index.html" class="button">Check Out</a></li>
