--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Check Out</a></li>
+									<li><a href="#" class="button large" target="_blank">Check Out</a></li>
 								</ul>
 							</article>
 
@@ -69,7 +69,7 @@
                                         It is created with React.
                                     </p>
 									<ul class="actions special">
-										<li><a href="https://hri100v.github.io/ready/React/superchat/index.html" class="button">Check Out</a></li>
+										<li><a href="https://hri100v.github.io/ready/React/superchat/index.html" class="button" target="_blank">Check Out</a></li>
 									</ul>
 								</article>
 								<article>
@@ -82,7 +82,8 @@
 										Using <strong>Service Worker</strong> and <strong>Web Manifest</strong> to make one standalone application.
                                     </p>
 									<ul class="actions special">
-										<li><a href="https://hri100v.github.io/ready/PWA/todo-app/index.html" class="button">Check Out</a></li>
+										<li><a href="https://hri100v.github.io/ready/PWA/todo-app/index.html" class="button" target="_blank">Check Out</a></li>
+										<li><a href="https://github.com/Hri100v/PWAs/tree/main/todo-app" class="button" target="_blank">Source</a></li>
 									</ul>
 								</article>
 								<article>
@@ -95,7 +96,7 @@
                                         Uses React and Firebase.
                                     </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Check Out</a></li>
+										<li><a href="#" class="button" target="_blank">Check Out</a></li>
 									</ul>
 								</article>
 							</section>
