--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP - Introduce myself</title>
+		<!-- <title>Massively by HTML5 UP - Introduce myself</title> -->
+		<title>Let me introduce myself</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,6 +17,7 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
+				<!-- TODO: Need to add picture of me (maybe in a circle) -->
 
 				<!-- Intro -->
 					<div id="intro">
@@ -35,6 +37,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Showcase</a></li>
+							<li class="active"><a href="#">My Work at jQWidgets</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/hri100/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
